--- a/src/modules/components/[0_grouped_0]-Profile/player-cabinet/Player-cabinet.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/player-cabinet/Player-cabinet.module.scss
@@ -5,29 +5,43 @@
   flex-direction: column;
   width: 100%;
   height: auto;
-  padding: 10px 0;
-  border-width: 1px;
-  border-bottom-style: solid;
-  border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-13, rgba(0, 0, 0, 0)) 1 0%;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid $site-color-5;
 
-  .playerImage {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    border: none;
-    border-radius: 5px;
-  }
-
-  .namePlayerH5 {
-    font-weight: 400;
-    font-size: 22px;
-    color: $color-3;
+  .rowUser {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     width: 100%;
-    height: 22px;
-    line-height: 22px;
-    text-align: center;
-    margin-top: 10px;
-    font-family: $fontCustom2;
+    height: auto;
+
+    &:nth-child(1) {
+      margin-bottom: 8px;
+    }
+
+    .image {
+      width: 48px;
+      min-width: 48px;
+      max-width: 48px;
+      height: 48px;
+      min-height: 48px;
+      max-height: 48px;
+      margin: 0 auto;
+      border: none;
+      border-radius: 4px;
+    }
+
+    .namePlayerH5 {
+      font-weight: 400;
+      font-size: 16px;
+      color: $site-color-2;
+      width: 100%;
+      height: 48px;
+      line-height: 48px;
+      font-family: $fontCustom2;
+      margin-left: 8px;
+    }
   }
 }
 
@@ -41,27 +55,9 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .playerWrapper {
-    .playerImage {
-      height: 75px;
-      width: 75px;
-    }
-
-    .namePlayerH5 {
-      font-size: 18px;
-    }
-  }
 }
 
 @media screen and (max-width: 960px) {
-  .playerWrapper {
-    padding: 0 0 8px 0;
-
-    .playerImage {
-      height: 100px;
-      width: 100px;
-    }
-  }
 }
 
 @media screen and (max-width: 768px) {
