--- a/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
@@ -10,9 +10,10 @@
     width: auto;
     height: 30px;
     line-height: 30px;
-    color: $color-3;
-    font-size: 20px;
+    color: $site-color-2;
+    font-size: 18px;
     font-weight: 400;
+    font-family: $fontCustom2;
     margin: 8px auto;
   }
 
@@ -56,11 +57,10 @@
       height: 130px;
       display: flex;
       flex-direction: row;
-      padding: 5px;
-      border: 1px solid $color-21;
+      border: 1px solid $site-color-5;
       border-radius: 7px;
-      margin-top: 15px;
-      background: $color-20;
+      margin-top: 16px;
+      background: $site-color-12;
 
       .imgBlock {
         display: flex;
@@ -101,11 +101,10 @@
         flex-direction: row;
         width: 100%;
         height: auto;
-        padding: 5px;
-        border-width: 1px;
-        border-left-style: solid;
-        border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $color-22, rgba(0, 0, 0, 0)) 1 100%;
-
+        padding: 4px;
+        border: none;
+        border-left: 1px solid $site-color-5;
+        margin-right: 8px;
 
         .textInformationH5 {
           font-weight: 400;
@@ -180,6 +179,8 @@
       .onePrizesWrapperBox {
         flex-direction: column;
         height: auto;
+        margin-top: 8px;
+        padding: 8px 0;
 
         .imgBlock {
           margin: 0 auto;
@@ -197,7 +198,7 @@
             border-width: 1px;
             border-bottom-style: solid;
             border-top-style: solid;
-            border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-22, rgba(0, 0, 0, 0)) 1 0;
+            border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $site-color-5, $site-color-5, $site-color-5, rgba(0, 0, 0, 0)) 1 0;
           }
 
           .pick {
