--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
@@ -13,9 +13,10 @@
     height: 32px;
     line-height: 32px;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 20px;
     text-align: center;
-    color: $color-3;
+    color: $site-color-2;
+    font-family: $fontCustom2;
   }
 
   form {
@@ -27,11 +28,11 @@
       height: 45px;
       line-height: 45px;
       outline: none;
-      background: $color-7;
-      border: 0.5px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       transition: all 0.25s ease-in-out;
-      color: $color-8;
+      color: $site-color-8;
       padding: 0 10px;
       margin: 10px auto;
 
@@ -39,22 +40,23 @@
       &:focus,
       &:active {
         outline: none;
-        background: $color-21;
       }
     }
 
     .error {
       bottom: 25px;
       width: auto;
-      max-width: 300px;
+      max-width: 350px;
       min-width: 225px;
       font-size: 16px;
+      font-weight: 400;
+      font-family: $fontCustom2;
       height: 20px;
       line-height: 20px;
       text-align: center;
-      margin: 0 auto;
-      color: $color-9;
-      transition: all 0.85s ease;
+      margin: 0 auto 4px auto;
+      color: $site-color-11;
+      transition: all 0.35s ease;
     }
 
     .buttonPasswordSubmit {
@@ -90,6 +92,8 @@
         line-height: 22px;
         font-size: 14px;
         font-weight: 400;
+        font-family: $fontCustom2;
+        color: $site-color-2;
         margin-left: 8px;
       }
 
@@ -101,7 +105,7 @@
         display: flex;
         width: 20px;
         height: 20px;
-        border: 1px solid #ccc;
+        border: 1px solid $site-color-5;
         border-radius: 4px;
         position: relative;
         vertical-align: middle;
@@ -116,10 +120,10 @@
         transform: translate(-50%, -50%);
         width: 13px;
         height: 13px;
-        background-color: $color-8;
+        background-color: $site-color-8;
         border-radius: 2px;
         opacity: 0;
-        transition: opacity 0.3s ease-in-out;
+        transition: opacity 0.35s ease-in-out;
       }
 
       input[type="checkbox"]:checked + .checkmark::before {
@@ -154,6 +158,10 @@
     }
 
     form {
+      .error {
+        font-size: 14px;
+      }
+
       .buttonPasswordSubmit {
         width: 200px;
         height: 35px;
