--- a/src/modules/components/error/Error.module.scss
+++ b/src/modules/components/error/Error.module.scss
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   width: 0;
   height: 0;
   opacity: 0;
@@ -33,8 +34,9 @@
     padding-left: 10px;
     height: auto;
     line-height: 24px;
-    color: $color-9;
-    font-size: 14px;
+    color: $site-color-11;
+    font-size: 13px;
+    font-family: $fontCustom2;
     font-weight: 400;
   }
 }
@@ -70,7 +72,7 @@
     .errorInformation {
       text-align: center;
       line-height: 1.5;
-      font-size: 13px;
+      font-size: 12px;
     }
   }
 }
