--- a/src/modules/components/[0_grouped_0]-Profile/articles/Articles.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/articles/Articles.module.scss
@@ -1,19 +1,3 @@
 @import "../../../../Variables";
 
-.articlesBlock {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-  padding: 50px;
-
-  .articlesTitleH4 {
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    color: $color-3;
-    font-size: 24px;
-    font-family: $fontCustom2;
-  }
-}
+.articlesBlock {}
