--- a/src/modules/pages/statistic/Statistic.module.scss
+++ b/src/modules/pages/statistic/Statistic.module.scss
@@ -12,7 +12,7 @@
     height: 1020px;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 0 auto 48px auto;
 
     .title {
       font-size: 32px;
@@ -31,7 +31,7 @@
   .mainStatistic {
     .statistic {
       width: auto;
-      margin: 0 50px;
+      margin: 0 48px 48px 48px;
     }
   }
 }
@@ -39,7 +39,7 @@
 @media screen and (max-width: 1280px) {
   .mainStatistic {
     .statistic {
-      margin: 0 45px;
+      margin: 0 44px 48px 44px;
     }
   }
 }
@@ -47,7 +47,7 @@
 @media screen and (max-width: 1024px) {
   .mainStatistic {
     .statistic {
-      margin: 0 40px;
+      margin: 0 40px 48px 40px;
     }
   }
 }
@@ -65,7 +65,7 @@
 @media screen and (max-width: 768px) {
   .mainStatistic {
     .statistic {
-      margin: 0 20px;
+      margin: 0 18px 24px 18px;
 
       .title {
         font-size: 26px;
@@ -77,7 +77,7 @@
 @media screen and (max-width: 640px) {
   .mainStatistic {
     .statistic {
-      margin: 0 15px;
+      margin: 0 16px 16px 16px;
 
       .title {
         font-size: 22px;
@@ -89,7 +89,7 @@
 @media screen and (max-width: 480px) {
   .mainStatistic {
     .statistic {
-      margin: 0 10px;
+      margin: 0 12px 12px 12px;
 
       .title {
         font-size: 18px;
@@ -101,7 +101,7 @@
 @media screen and (max-width: 360px) {
   .mainStatistic {
     .statistic {
-      margin: 0 8px;
+      margin: 0 8px 8px 8px;
 
       .title {
         font-size: 16px;
