фікс прелоадера та видалення аос

--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -13,3 +13,35 @@
     margin: 0 auto;
   }
 }
+
+.full {
+  height: 98vh;
+  padding-bottom: 128px;
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
+}
