--- a/src/modules/custon-modules/ag-grid.scss
+++ b/src/modules/custon-modules/ag-grid.scss
@@ -2,7 +2,7 @@
 
 *::-webkit-scrollbar {
   width: 8px !important;
-  background-color: rgb(32, 42, 48) !important;
+  background-color: $site-color-7 !important;
 }
 
 .ag-root-wrapper {
