--- a/src/modules/pages/regulations/Regulations.module.scss
+++ b/src/modules/pages/regulations/Regulations.module.scss
@@ -14,9 +14,9 @@
     height: auto;
     margin: 25px auto 0 auto;
     padding: 25px;
-    background: $color-11;
-    border: none;
-    border-radius: 7px;
+    background: $site-color-4;
+    border: 1px solid $site-color-5;
+    border-radius: 8px;
 
     .list-reg {
       display: flex;
@@ -25,7 +25,8 @@
 
       .btn-click {
         font-weight: 400;
-        color: white;
+        font-family: $fontCustom2;
+        color: $site-color-2;
         height: auto;
         line-height: 1;
         text-align: start;
@@ -33,19 +34,19 @@
         outline: none;
         border-radius: 7px;
         border: none;
-        background: $color-21;
+        background: $site-color-12;
         transition: all 0.35s ease;
         padding: 10px;
         margin: 10px 0;
         cursor: pointer;
 
         &:hover {
-          background: $color-22;
+          background: $site-color-1;
         }
 
         &:disabled {
-          background: $color-4;
-          color: $color-3;
+          background: $site-color-9;
+          color: $site-color-2;
         }
       }
     }
@@ -70,10 +71,11 @@
             width: 100%;
             height: 35px;
             line-height: 35px;
-            color: $color-8;
+            color: $site-color-8;
             font-size: 20px;
             font-weight: 400;
             padding-left: 25px;
+            font-family: $fontCustom2;
           }
 
           .regulations-list {
@@ -88,7 +90,7 @@
               height: auto;
               font-size: 16px;
               font-weight: 400;
-              color: $color-3;
+              color: $site-color-2;
               line-height: 1.5;
 
               span {
@@ -142,7 +144,7 @@
                   height: 25px;
                   line-height: 25px;
                   margin: 0 8px auto 8px;
-                  color: $color-9;
+                  color: $site-color-11;
                 }
               }
 
@@ -152,7 +154,7 @@
                 margin-left: 5px;
                 font-size: 14px;
                 font-weight: 400;
-                color: $color-3;
+                color: $site-color-2;
                 line-height: 1.5;
               }
             }
