--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
@@ -34,7 +34,7 @@
       line-height: 28px;
       font-size: 16px;
       font-weight: 400;
-      color: $color-3;
+      color: $site-color-2;
       padding-left: 10px;
       padding-right: 10px;
     }
@@ -46,15 +46,15 @@
       height: auto;
       min-height: 36px;
       max-height: 180px;
-      border: 0.5px solid $color-22;
+      border: 1px solid $site-color-5;
       border-radius: 7px;
-      color: $color-8;
+      color: $site-color-8;
       text-align: start;
       font-size: 16px;
       font-weight: 400;
       outline: none !important;
       padding: 7px;
-      background: $color-7;
+      background: $site-color-12;
       transition: all 0.35s ease;
 
       &::-webkit-scrollbar {
@@ -65,12 +65,12 @@
       &:active,
       &:focus {
         outline: none;
-        background: $color-21;
+        background: $site-color-1;
       }
 
       .optionList {
-        color: $color-3;
-        background: $color-7;
+        color: $site-color-2;
+        background: $site-color-12;
         font-size: 14px;
         border-radius: 7px;
 
@@ -96,7 +96,7 @@
         font-weight: 400;
         font-size: 14px;
         text-align: center;
-        color: $color-3;
+        color: $site-color-2;
         margin-bottom: 15px;
         cursor: pointer;
         outline: none;
@@ -106,7 +106,7 @@
         &:active,
         &:focus {
           outline: none;
-          color: $color-4;
+          color: $site-color-9;
         }
       }
     }
