--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
@@ -36,6 +36,7 @@
       display: flex;
       flex-direction: column;
       padding: 0 48px;
+      width: 100%;
 
       .text {
         font-weight: 400;
@@ -44,6 +45,7 @@
         color: $site-color-2;
         text-align: center;
         line-height: 1.5;
+        margin: 0 auto;
       }
 
       .good {
