texture pack edit + variables color

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -22,7 +22,7 @@ $color-21: rgba(1, 22, 37, 1); // дубликат оказывается $color
 $color-22: rgba(255, 255, 255, 0.1);
 
 
-
+$site-color-0: rgba(0, 0, 0, 0.90); // прозрачность
 $site-color-1: rgba(24, 24, 27, 1); // для ховеров
 $site-color-2: rgba(244, 244, 244, 1); // текст
 $site-color-3: rgba(17, 17, 20, 1); // основный фон + хидер
