--- a/src/modules/components/button/Button.module.scss
+++ b/src/modules/components/button/Button.module.scss
@@ -1,5 +1,37 @@
 @import "../../../Variables";
 
+.btn {
+  width: auto;
+  min-width: 125px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  font-size: 15px;
+  font-family: $fontCustom2;
+  font-weight: 400;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.35s ease;
+  color: $site-color-2;
+
+  &:hover {
+    color: $site-color-1;
+  }
+}
+
+.submit {
+  background: $site-color-9;
+}
+
+.delete {
+  background: $site-color-8;
+}
+
+.view {
+  background: $site-color-11;
+}
+
 @media screen and (max-width: 1600px) {
 }
 
