--- a/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
@@ -17,26 +17,30 @@
     margin: 8px auto;
   }
 
-  .prizes-link {
+  .warn_title {
+    font-size: 18px;
     font-weight: 400;
-    width: 100%;
-    height: 44px;
-    line-height: 44px;
-    color: $color-1;
-    margin: 8px auto 0 auto;
+    font-family: $fontCustom2;
+    color: $site-color-2;
     text-align: center;
-    outline: none;
-    transition: all 0.55s ease;
-    text-decoration: none;
+    padding: 16px;
+    margin-top: 18%;
+    line-height: 1.35;
 
-    &:active,
-    &:visited,
-    &:hover {
-      outline: none;
-    }
+    a {
+      font-weight: inherit;
+      font-size: inherit;
+      font-family: inherit;
+      height: inherit;
+      color: $color-1;
+      width: auto;
+      margin: 0 0 0 4px;
+      transition: all 0.55s ease;
+      text-decoration: none;
 
-    &:hover {
-      color: $color-12;
+      &:hover {
+        color: $color-12;
+      }
     }
   }
 
@@ -119,31 +123,10 @@
           margin-right: 8px;
         }
 
-        .pick {
+        .btn_wrapper {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           justify-content: center;
-          width: auto;
-          max-width: 125px;
-          min-width: 125px;
-          height: 35px;
-          line-height: 35px;
-          margin: auto 0;
-          text-align: center;
-          font-size: 16px;
-          font-weight: 400;
-          color: $color-3;
-          background: $color-4;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-          transition: all 0.35s ease;
-          font-family: $fontCustom2;
-
-          &:hover {
-            background: $color-6;
-            color: $color-2;
-          }
         }
       }
     }
@@ -175,6 +158,10 @@
 
 @media screen and (max-width: 640px) {
   .boxPrizesWrapper {
+    .warn_title {
+      font-size: 16px;
+    }
+
     .allPrizesContainer {
       .onePrizesWrapperBox {
         flex-direction: column;
@@ -200,27 +187,19 @@
             border-top-style: solid;
             border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $site-color-5, $site-color-5, $site-color-5, rgba(0, 0, 0, 0)) 1 0;
           }
-
-          .pick {
-            margin: 0 auto;
-          }
         }
       }
-    }
-
-    .prizes-link {
-      height: fit-content;
-      min-height: fit-content !important;
-      max-height: none;
-      line-height: 1.25;
-      margin: 10px auto 5px auto;
     }
   }
 }
 
 @media screen and (max-width: 480px) {
+  .boxPrizesWrapper {
+    .warn_title {
+      font-size: 15px;
+    }
+  }
 }
 
 @media screen and (max-width: 360px) {
-
 }
