--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
@@ -59,27 +59,6 @@
       transition: all 0.35s ease;
     }
 
-    .buttonPasswordSubmit {
-      background-color: $color-14;
-      cursor: pointer;
-      transition: all 0.35s ease;
-      width: 250px;
-      height: 50px;
-      line-height: 50px;
-      font-weight: 400;
-      font-size: 20px;
-      margin: 20px auto 0 auto;
-      color: $color-3;
-      border-radius: 15px;
-      border: none;
-      font-family: $fontCustom2;
-
-      &:hover {
-        background: $color-4;
-        color: $color-2;
-      }
-    }
-
     .labelWrapperCheckbox {
       width: auto;
       height: 22px;
@@ -130,6 +109,11 @@
         opacity: 1;
       }
     }
+
+    .wrapper_btn {
+      display: flex;
+      margin: 16px auto;
+    }
   }
 }
 
@@ -160,13 +144,6 @@
     form {
       .error {
         font-size: 14px;
-      }
-
-      .buttonPasswordSubmit {
-        width: 200px;
-        height: 35px;
-        line-height: 35px;
-        font-size: 16px;
       }
     }
   }
