--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/mini-marker-components/map-svg-add-block/MapSvgAddBlock.module.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/mini-marker-components/map-svg-add-block/MapSvgAddBlock.module.scss
@@ -4,15 +4,12 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100%;
-  min-height: 72px;
+  width: auto;
   height: auto;
-  max-height: none;
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin: 0;
   border: 1px solid $site-color-5;
   border-radius: 4px;
-  padding: 7.5px;
+  padding: 4px;
   transition: all 0.35s ease;
   background: $site-color-12;
 
@@ -20,15 +17,15 @@
     background: $site-color-1;
 
     > .margin_add_box {
-      padding: 0;
+      padding: 2px;
     }
   }
 
   .margin_add_box {
     width: 100%;
-    height: 65px;
+    height: 26px;
     margin: 0 auto;
-    padding: 5px;
+    padding: 4px;
     transition: all 0.35s ease;
 
     svg {
@@ -64,12 +61,29 @@
 }
 
 @media screen and (max-width: 768px) {
+  .add_wrapper {
+    padding: 2px;
+
+    .margin_add_box {
+      height: 24px;
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
+  .add_wrapper {
+    width: 30px;
+
+    .margin_add_box {
+      height: 24px;
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
+  .add_wrapper {
+    width: 80px;
+  }
 }
 
 @media screen and (max-width: 360px) {
